--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>{{ site.name }} | {{ page.title }}</title>
+	
 </head>
 <body>
 	<!--[if lt IE 7]>
