--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>{{ site.name }} | {{ page.title }}</title>
-	
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
 	<!--[if lt IE 7]>
