--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,4 +10,23 @@
 	<!--[if lt IE 7]>
 		<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 	<![endif]-->
+	<header class="main-header">
+		<div class="head-wrap">
+			<nav class="head-nav">
+				<ul>
+					<a href="{{ site.url }}">
+						<li class="logo"><h1 class="away">FNOB</h1></li>
+					</a>
+					<a href="{{ site.url }}/about.html">
+						<li>About</li>
+					</a>
+					<a href="{{ site.url }}/books-list.html">
+						<li>Books List</li>
+					</a>
+					<a href="{{site.url }}/contribute.html">
+						<li>Contribute</li>
+					</a>
+				</ul>
+			</nav>
+	</header>
 	<div class="main"></div>
