--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>{{ site.name }} | {{ page.title }}</title>
 	<meta name="viewport" content="width=device-width">
+
+	<link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
 	<!--[if lt IE 7]>
