--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,11 +38,12 @@ code {
 	width: 128px;
 	height: 128px;
 	background-color: #4e99b8;
-	background-image: url('');
+	background-image: url('../img/logo.png');
 }
 
 .away {
-	right: -10000px;
+	position: absolute;
+	margin-right: -10000px;
 	z-index: 0;
 }
 
