--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 	<title>{{ site.name }} | {{ page.title }}</title>
 	<meta name="viewport" content="width=device-width">
 
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 	<!--[if lt IE 7]>
