--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,7 @@ code {
 	width: 128px;
 	height: 128px;
 	background-color: #4e99b8;
-	background-image: url(../img/logo.png);
+	background-image: url(../img/logo-128.png);
 }
 
 .away {
