--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ body {
 }
 
 .main {
-	margin-top: 10px;
+	margin-top: 200px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -57,7 +57,8 @@ code {
 }
 
 .main-header ul li {
-	padding: ;
+	display: inline;
+	padding: 10px;
 }
 
 @media screen and (max-width: 600px) {
