Change list item font

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,7 @@ code {
 	display: inline;
 	padding: 10px;
 
-	font: 15px Rockwell;
+	font: 15px Myriad Pro, sans-serif;
 }
 
 .main-header ul li.logo {
