Logo image fix #2

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 		<div class="head-wrap">
 			<nav class="head-nav">
 				<a href="{{ site.url }}">
-						<li class="logo"><h1 class="away">FNOB</h1></li>
+						<span class="logo"><h1 class="away">FNOB</h1></span>
 					</a>
 				<ul>
 					<a href="{{ site.url }}/about.html">
